force-app/main/default/objects/Interview_Detail__c/Interview_Detail__c.object-meta.xml
<CustomObject>
    <label>Interview Detail</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interview Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>