force-app/main/default/objects/Interview_Detail__c/fields/External_Interviewer_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Interviewer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Interviewer Email</label>
    <type>Email</type>
</CustomField>