force-app/main/default/objects/Interview_Detail__c/fields/External_Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Interviewer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Interviewer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>