force-app/main/default/objects/Interview_Detail__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview Feedback</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>