force-app/main/default/objects/Interview_Detail__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>to store the date of the interiew</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>