force-app/main/default/objects/Interview_Detail__c/fields/Interview_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Time__c</fullName>
    <label>Interview Time</label>
    <type>Time</type>
</CustomField>