force-app/main/default/objects/Interview_Detail__c/fields/Interviewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Type__c</fullName>
    <label>Interviewer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>