force-app/main/default/objects/Interview_Detail__c/fields/Interviewer_User__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Interview Records</relationshipLabel>
    <relationshipName>Interview_User</relationshipName>
    <type>Lookup</type>
</CustomField>