force-app/main/default/objects/Interview_Detail__c/fields/Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Link</label>
    <type>Url</type>
</CustomField>