force-app/main/default/objects/Interview_Detail__c/validationRules/External_Details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Details_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            ISPICKVAL(Interviewer_Type__c , &quot;External&quot;),
            OR(
                ISBLANK(External_Interviewer_Name__c),
                ISBLANK(External_Interviewer_Email__c)
            )
        )</errorConditionFormula>
    <errorMessage>Please enter external interviewer name and email.</errorMessage>
</ValidationRule>