force-app/main/default/objects/Interview_Detail__c/validationRules/User_Required_When_Type_User.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Required_When_Type_User</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            ISPICKVAL(Interviewer_Type__c , &quot;User&quot;),
            ISBLANK(Interviewer_User__c)
        )</errorConditionFormula>
    <errorMessage>Please select an internal User as interviewer.</errorMessage>
</ValidationRule>